--- a/cocteleria/package.json
+++ b/cocteleria/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "heroku": "^7.65.0",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -24,5 +25,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "engines": {
+  "node": "12.x"
+}
+
 }
